# AuthNexus

./: .dockerignore  .gitignore  .readthedocs.yaml  LICENSE  README.md  Security.md  contribute.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  python-publish.yml
docker/: Dockerfile  entrypoint.sh
docs/: Makefile  requirements.txt
docs/source/: conf.py  contributing.rst  index.rst
docs/source/api/: authnexus.rst  security-monitor.rst  webauthn.rst
docs/source/concepts/: audit-logging.rst  authentication-flows.rst  risk-engine.rst
docs/source/getting-started/: installation.rst  quickstart.rst  security-guide.rst
requirements/: dev.txt  prod.txt
scripts/: deploy.sh  security_scan.sh
src/: __init__.py
src/core/: auth_manager.py  security_monitor.py  webauthn.py
src/integerations/: fastapi.py  flask.py
tests/: test_auth_flows.py  test_security.py
