[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuthNexus"
version = "0.1.0"
description = "Modern authentication with built-in security monitoring"
authors = [{name = "Satwik Mishra", email = "satwikmishra46@gmail.com"}]
license = {text = "AGPL 3.0"}
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "python-jose[cryptography]>=3.3",
    "webauthn>=1.2.0",
    "httpx>=0.24"
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.95"]
flask = ["flask>=2.0"]

[project.urls]
Documentation = "https://authnexus.readthedocs.io"
Source = "https://github.com/satwikmishra11/authnexus"
